# QModernGrids

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/QModernGrids/: QmgEventHandler.h  QmgModelLogger.h  QmgObservableList.h  QmgObservableVariantListModel.h  QmgObservableVariantListProxy.h  QmgPrivate.h  QmgProxyModelUtils.h
include/QModernGrids/Builders/: QmgColumnCollectionBuilder.h  QmgColumnModelBuilder.h  QmgCommonModelBuilder.h  QmgDataModelBuilder.h  QmgHeaderdataModelBuilder.h  QmgModelBuilder.h  QmgSourceModelBuilder.h
include/QModernGrids/Decorators/: QmgAlternateRowshadingModelDecorator.h  QmgCheckboxMultimarkModelDecorator.h  QmgColumnModelDecorator.h  QmgDataModelDecorator.h  QmgFetchmoreDecorator.h  QmgHeaderdataModelDecorator.h  QmgObjectdataModelDecorator.h  QmgSetDataModelDecorator.h
scripts/appveyor/: msvc2015-qt57.bat
src/: CMakeLists.txt  QmgModelLogger.cpp  QmgObservableVariantListModel.cpp  QmgProxyModelUtils.cpp
src/Builders/: QmgColumnCollectionBuilder.cpp  QmgColumnModelBuilder.cpp  QmgCommonModelBuilder.cpp  QmgDataModelBuilder.cpp  QmgHeaderDataModelBuilder.cpp  QmgModelBuilder.cpp  QmgSourceModelBuilder.cpp
src/Decorators/: QmgAlternateRowshadingModelDecorator.cpp  QmgCheckboxMultimarkModelDecorator.cpp  QmgColumnModelDecorator.cpp  QmgDataModelDecorator.cpp  QmgFetchmoreDecorator.cpp  QmgHeaderdataModelDecorator.cpp  QmgObjectdataModelDecorator.cpp  QmgSetDataModelDecorator.cpp
test/QmgEventHandlerTest/: QmgEventHandlerTest.cpp
test/QmgObservableListTest/: QmgObservableListTest.cpp
test/QmgObservableVariantListProxyTest/: QmgObservableVariantListProxyTest.cpp
test/cmake/: base.cmake  qtest.cmake
