cmake_minimum_required(VERSION 3.1)

project(QModernGrids)

# The version number.
set (QMODERNGRIDS_VERSION_MAJOR 0)
set (QMODERNGRIDS_VERSION_MINOR 1)

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

enable_testing()

add_subdirectory(src)
add_subdirectory(test)